--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
-@import url("https://fonts.googleapis.com/css2?family=Rajdhani:wght@600&family=Zilla+Slab:wght@300;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Rajdhani:wght@600&family=Zilla+Slab:wght@300;500&display=swap");
