--- a/index.css
+++ b/index.css
@@ -5,3 +5,16 @@
 body {
    background-color: #0a0b0d;
 }
+.custom-scrollbar::-webkit-scrollbar {
+   width: 12px; /* width of the entire scrollbar */
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+   background: #030303; /* color of the tracking area */
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+   background-color: #4e4e4e; /* color of the scroll thumb */
+   border-radius: 6px; /* roundness of the scroll thumb */
+   border: 3px solid #1e1e1e; /* creates padding around scroll thumb */
+}
